--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,11 @@
       <artifactId>allure-testng</artifactId>
       <version>${allure-testng.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>3.141.59</version>
     </dependency>
 
   </dependencies>
